Bug 223626 - New ICal calendar files are not checked by default
Summary: New ICal calendar files are not checked by default
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-20 23:21 UTC by Sabine Faure
Modified: 2016-02-08 13:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-01-20 23:21:36 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kontact and go to KOrg
- in the resources/folders section, right click on 'New Calendar...'
- Select 'ICal Calendar File' and click on 'Ok'
- In the 'Select Calendar – Akonadi Resource' dialogue click on the floppy disk icon, select a location and a file name (ex: Ical file).
- Click on Ok.

Ical file is added in the resources/folders section of the main view but its check box is not checked by default.

I think it should be so that the user can see the events that he will create in this calendar.

Akonadi-ports Branch, Svn Rev 1077526
Comment 1 Laurent Montel 2010-01-21 13:40:03 UTC
I confirm It must be active by default.
I will fix it.
Comment 2 Sergio Martins 2012-12-09 22:25:20 UTC
Git commit d59fcb4d7533db4d5f7e61f931197de4dbb13fb9 by Sergio Martins.
Committed on 09/12/2012 at 23:04.
Pushed by smartins into branch 'master'.

korg: Check new calendars by default.

This is a workaround, the real problem should be fixed in the
akonadi libraries, but it isn't trivial.

M  +31   -0    korganizer/akonadicollectionview.cpp
M  +4    -0    korganizer/akonadicollectionview.h

http://commits.kde.org/kdepim/d59fcb4d7533db4d5f7e61f931197de4dbb13fb9
Comment 3 Sergio Martins 2016-02-08 12:25:58 UTC
Git commit 0af2c20ba1f91399c130efab3e5ad6b5d2be67fa by Sergio Martins.
Committed on 08/02/2016 at 12:14.
Pushed by smartins into branch 'vendor/intevation/4.14'.

korg: Fix checking new calendars when they are created.

This wasn't working properly for collections with children.
When a new row+children is inserted we only get the row insertion
signal for the parent, not for the children, which must me iterated manually.

M  +6    -0    korganizer/akonadicollectionview.cpp

http://commits.kde.org/kdepim/0af2c20ba1f91399c130efab3e5ad6b5d2be67fa
Comment 4 Sergio Martins 2016-02-08 13:30:26 UTC
Git commit 2aec255c6465676404e4694405c153e485e477d9 by Sergio Martins.
Committed on 08/02/2016 at 13:29.
Pushed by smartins into branch 'KDE/4.14'.

korg: Fix checking new calendars when they are created.

This wasn't working properly for collections with children.
When a new row+children is inserted we only get the row insertion
signal for the parent, not for the children, which must me iterated manually.
(cherry picked from commit 0af2c20ba1f91399c130efab3e5ad6b5d2be67fa)

M  +6    -0    korganizer/akonadicollectionview.cpp

http://commits.kde.org/kdepim/2aec255c6465676404e4694405c153e485e477d9