korg: Check new calendars by default.

This is a workaround, the real problem should be fixed in the
akonadi libraries, but it isn't trivial.

BUG: 223626